修复生成session repo首字母的问题