@@ -264,6 +264,138 @@
         </profile>
 
         <profile>
+            <id>native-llvm</id>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.springframework.boot</groupId>
+                            <artifactId>spring-boot-maven-plugin</artifactId>
+                            <configuration>
+                                <image>
+                                    <builder>paketobuildpacks/builder:tiny</builder>
+                                    <env>
+                                        <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+                                    </env>
+                                </image>
+                                <mainClass>cn.procsl.ping.app.DistributeApplication</mainClass>
+                                <arguments>
+                                    <argument>
+                                        --trace-class-initialization=ch.qos.logback.classic.model.ConfigurationModel,ch.qos.logback.core.util.Duration,org.slf4j.LoggerFactory,ch.qos.logback.core.util.Duration
+                                    </argument>
+                                    <argument>-H:+ReportExceptionStackTraces</argument>
+                                    <argument>-H:CompilerBackend=llvm</argument>
+                                </arguments>
+                            </configuration>
+
+                            <executions>
+                                <execution>
+                                    <id>process-aot</id>
+                                    <goals>
+                                        <goal>process-aot</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                            <version>${springboot.version}</version>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <configuration>
+                            <buildArgs>
+                                -H:CompilerBackend=llvm
+                                --no-fallback
+                                --initialize-at-build-time=org.springframework.util.unit.DataSize
+                                --initialize-at-build-time=org.slf4j.MDC
+                                --initialize-at-build-time=ch.qos.logback.classic.Level
+                                --initialize-at-build-time=ch.qos.logback.classic.Logger
+                                --initialize-at-build-time=ch.qos.logback.core.util.StatusPrinter
+                                --initialize-at-build-time=ch.qos.logback.core.status.StatusBase
+                                --initialize-at-build-time=ch.qos.logback.core.status.InfoStatus
+                                --initialize-at-build-time=ch.qos.logback.core.spi.AppenderAttachableImpl
+                                --initialize-at-build-time=org.slf4j.LoggerFactory
+                                --initialize-at-build-time=ch.qos.logback.core.util.Loader
+                                --initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder
+                                --initialize-at-build-time=ch.qos.logback.classic.spi.ThrowableProxy
+                                --initialize-at-build-time=ch.qos.logback.core.CoreConstants
+                                --initialize-at-build-time=ch.qos.logback.classic.PatternLayout
+                                --initialize-at-build-time=ch.qos.logback.core.util.Duration
+                                --trace-class-initialization=ch.qos.logback.classic.PatternLayout
+                                --trace-class-initialization=ch.qos.logback.core.util.Duration
+
+                                --initialize-at-run-time=io.netty.channel.epoll.Epoll
+                                --initialize-at-run-time=io.netty.channel.epoll.Native
+                                --initialize-at-run-time=io.netty.channel.epoll.EpollEventLoop
+                                --initialize-at-run-time=io.netty.channel.epoll.EpollEventArray
+                                --initialize-at-run-time=io.netty.channel.DefaultFileRegion
+                                --initialize-at-run-time=io.netty.channel.kqueue.KQueueEventArray
+                                --initialize-at-run-time=io.netty.channel.kqueue.KQueveEventLoop
+                                --initialize-at-run-time=io.netty.channel.kqueue.Native
+                                --initialize-at-run-time=io.netty.channel.unix.Errors
+                                --initialize-at-run-time=io.netty.channel.unix.1ovArray
+                                --initialize-at-run-time=io.netty.channel.unix.Limits
+                                --initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger
+                                --initialize-at-run-time=io.netty.channel.unix.Socket
+                                --initialize-at-run-time=io.netty.channel.ChannelHandlerMask
+
+                                --initialize-at-build-time=ch.qos.logback
+                                --initialize-at-build-time=com.ctc.wstx
+
+                                --enable-url-protocols=http
+                                -H:EnableURLProtocols=http
+                                -H:EnableURLProtocols=https
+
+                                --trace-class-initialization=org.apache.log4j.Layout
+                                --trace-class-initialization=java.beans.Introspector
+                                --trace-class-initialization=com.sun.beans.introspect.ClassInfo
+
+                                -Dio.netty.tryReflectionSetAccessible=true
+                                --add-exports=java.base/java.nio=ALL-UNNAMED
+                                --add-opens java.base/java.nio=ALL-UNNAMED
+
+                                --report-unsupported-elements-at-runtime
+
+                                --allow-incomplete-classpath
+                                -H:+ReportExceptionStackTraces
+                            </buildArgs>
+                            <debug>true</debug>
+                        </configuration>
+                    </plugin>
+                </plugins>
+
+            </build>
+
+            <repositories>
+                <repository>
+                    <id>spring-milestones</id>
+                    <name>Spring Milestones</name>
+                    <url>https://repo.spring.io/milestone</url>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+            <pluginRepositories>
+                <pluginRepository>
+                    <id>spring-milestones</id>
+                    <name>Spring Milestones</name>
+                    <url>https://repo.spring.io/milestone</url>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </pluginRepository>
+            </pluginRepositories>
+
+
+        </profile>
+
+
+
+        <profile>
             <id>native</id>
             <build>
                 <pluginManagement>
